--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Adventure Hiking</title>
+	<title>Smart Sort</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
