--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
                     <p style="text-align: center;"> Environmental protection is a global issue and a problem we face every day. The most basic thing to do is waste sorting. This year, we implemented a waste sorting policy in Shanghai, China. From children to the elderly, we must learn to classify garbage. I think this is an excellent guide. For the development of our current society, I found that both web pages and applications are basically about green environmental protection. I think it is more important to make people green from the primary garbage classification. But I haven't found an application that teaches people how to classify garbage correctly. I hope to have a convenient medium, to sum up, some information to make people use it more quickly in real life.
 </p>
+                    <p>Reference:  <a href="https://www.nationalgeographic.com/news/2014/4/140414-ocean-garbage-patch-plastic-pacific-debris/">               National Geographic</a></p> 
+                                   <a href="https://wellington.govt.nz/services/environment-and-waste/rubbish-and-recycling/recycling">Wellington City Council</a></p>
+                                   <a href="https://www.recycle.co.nz/easytodo.php">Recycle.co.nz</a></p>
+                                   <a href="http://www.reclaim.co.nz/duties.php">Reclaim</a></p>
+
 
                     <img src="img/1.jpg" alt="Discover" width="1000px" height="200px">
 
